[package]
name = "hocon"
version = "0.9.0"
authors = ["François Mockers <mockersf@gmail.com>", "Logan McGrath <keywordsalad@thisfieldwas.green>"]
edition = "2018"
description = "Reads HOCON configuration files"
repository = "https://github.com/keywordsalad/hocon.rs"
homepage = "https://github.com/keywordsalad/hocon.rs"
documentation = "https://docs.rs/hocon"
keywords = ["hocon", "configuration"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "keywordsalad/hocon.rs" }

[dependencies]
thiserror = "1.0.*"
nom = "4.2"
serde = { version = "1.0.*", optional = true }
java-properties = "2.0.*"
memchr = "2.5.*"
reqwest = { version = "0.11.*", optional = true, default-features = false, features = [ "blocking", "rustls", "rustls-tls-native-roots" ] }
uuid = { version = "1.3.*", features = [ "v4" ] }
serde_path_to_error = "0.1.*"
aho-corasick = "1.0.*"
lazy_static = "1.4.*"
linked-hash-map = "0.5.*"

[dev-dependencies]
test-generator = "0.3.*"
insta = "1.29.*"
serde = { version = "1.0.*", features = [ "derive" ] }
serde_json = "1.0.*"
criterion = "0.5.*"
rand = "0.8.*"

[features]
default = [ "test-snapshot", "serde-support", "url-support" ]
test-snapshot = []
serde-support = [ "serde" ]
url-support = [ "reqwest" ]

[[bench]]
name = "parse"
harness = false
